--- a/Magic 8 Ball/Base.lproj/Main.storyboard
+++ b/Magic 8 Ball/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,84 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Magic_8_Ball" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VdO-p8-AT2">
+                                <rect key="frame" x="16" y="187.5" width="343" height="292"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="N5S-3U-rnS"/>
+                                    <constraint firstAttribute="height" constant="292" id="UVm-Io-HcI"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CQV-Go-cEC">
+                                <rect key="frame" x="67.5" y="30" width="240" height="132.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask me anything" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ixx-Sl-R8Y">
+                                        <rect key="frame" x="12.5" y="48.5" width="215" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="fyl-rF-BGB"/>
+                                            <constraint firstAttribute="width" constant="215" id="zLT-fR-CKn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Ixx-Sl-R8Y" firstAttribute="centerX" secondItem="CQV-Go-cEC" secondAttribute="centerX" id="KZU-sV-MC3"/>
+                                    <constraint firstItem="Ixx-Sl-R8Y" firstAttribute="centerY" secondItem="CQV-Go-cEC" secondAttribute="centerY" id="Wuw-ZQ-uda"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V5y-u5-Yku">
+                                <rect key="frame" x="67.5" y="509.5" width="240" height="137.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LHl-CJ-nVH">
+                                        <rect key="frame" x="70" y="36.5" width="100" height="65"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="65" id="TMa-gL-PZA"/>
+                                            <constraint firstAttribute="width" constant="100" id="yHG-gG-8GL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="40"/>
+                                        <state key="normal" title="Ask">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="askButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kYR-fI-0zz"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="LHl-CJ-nVH" firstAttribute="centerY" secondItem="V5y-u5-Yku" secondAttribute="centerY" id="jqV-Vw-596"/>
+                                    <constraint firstItem="LHl-CJ-nVH" firstAttribute="centerX" secondItem="V5y-u5-Yku" secondAttribute="centerX" id="moZ-XD-9Wh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="CQV-Go-cEC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="7Fw-Kz-6JU"/>
+                            <constraint firstItem="CQV-Go-cEC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67.5" id="Iuo-0I-bD8"/>
+                            <constraint firstItem="V5y-u5-Yku" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67.5" id="JbR-sO-cMn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CQV-Go-cEC" secondAttribute="trailing" constant="67.5" id="OUn-P0-5qL"/>
+                            <constraint firstItem="VdO-p8-AT2" firstAttribute="top" secondItem="CQV-Go-cEC" secondAttribute="bottom" constant="25" id="X0c-s3-2eR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="V5y-u5-Yku" secondAttribute="bottom" constant="20" id="aP5-Ie-LQ9"/>
+                            <constraint firstItem="VdO-p8-AT2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eME-L4-Ltc"/>
+                            <constraint firstItem="VdO-p8-AT2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hUv-WZ-SSL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V5y-u5-Yku" secondAttribute="trailing" constant="67.5" id="lQV-xy-43L"/>
+                            <constraint firstItem="V5y-u5-Yku" firstAttribute="top" secondItem="VdO-p8-AT2" secondAttribute="bottom" constant="30" id="rz8-UW-6hn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="VdO-p8-AT2" id="s4n-9o-T3a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-33" y="147"/>
         </scene>
     </scenes>
 </document>
